--- a/src/app/infrastructuremodels/infrastructuremodels.component.html
+++ b/src/app/infrastructuremodels/infrastructuremodels.component.html
@@ -1,1 +1,6 @@
-<p>infrastructuremodels works!</p>
+<!-- <iframe src="../assests/trails.html"  width="1600" height="460" style="border:0;">
+</iframe> -->
+<iframe src="https://kovikarthik.github.io/sayduckaz21/"  width="1600" height="460" style="border:0;">
+</iframe>
+
+<!-- <iframe width="100%" height="100%" frameBorder="0" [src]="sayduck"></iframe> -->
