--- a/src/app/localanalysis/localanalysis.component.html
+++ b/src/app/localanalysis/localanalysis.component.html
@@ -1,1 +1,3 @@
-<p>localanalysis works!</p>
+<div style="height: 70vh;display: flex;text-align: center;justify-content: center;align-items: center;">
+    <h1><b>Local Analysis works!</b></h1>
+</div>
