--- a/src/app/appservices/appservices.component.html
+++ b/src/app/appservices/appservices.component.html
@@ -22,32 +22,47 @@
     <h4>
         CATEGORIZED MAPS:
     </h4>
-
-    <p  class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
-        Categorized maps are the domain where the slums can be identified based on Population density or Area Occupied by the
+    <p class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
+        Categorized maps are the domain where the slums can be identified based on Population density or Area Occupied by
+        the
         slum.
     </p>
-    <h4>
-        Population density-based map:
-    </h4>
+    <ul>
+        <li>
+            <h4>
+                Population density-based map:
 
-    <p  class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
-        POPULATION DENSITY MAPS are typically derived from census data and aggregated into arbitrary areal units such as census
-        tracts, block groups, or at best census blocks. The major assumption with this representation is that within the
-        boundary of the areal unit the population density is homogeneous. While in dense urban areas comprised of small areal
-        units this assumption may be relatively accurate, population densities in larger census block groups outside of the
-        urban center often differ significantly within the block group boundary. This technique can be improved by using
-        ancillary data sources such as topographic maps, satellite imagery, and land cover datasets to estimate the true
-        population distribution. Dasymetric mapping can be used to categorize geography into inhabitable and uninhabitable
-        regions based on predefined density values for different settlement patterns.
-    </p>
-    <h4>
-        Area Categorization:
-    </h4>
+            </h4>
+        </li>
+        <p class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
+            POPULATION DENSITY MAPS are typically derived from census data and aggregated into arbitrary areal units such as
+            census
+            tracts, block groups, or at best census blocks. The major assumption with this representation is that within the
+            boundary of the areal unit the population density is homogeneous. While in dense urban areas comprised of small
+            areal
+            units this assumption may be relatively accurate, population densities in larger census block groups outside of the
+            urban center often differ significantly within the block group boundary. This technique can be improved by using
+            ancillary data sources such as topographic maps, satellite imagery, and land cover datasets to estimate the true
+            population distribution. Dasymetric mapping can be used to categorize geography into inhabitable and uninhabitable
+            regions based on predefined density values for different settlement patterns.
+        </p>
+        <li>
+            <h4>
+                Area Categorization:
+            </h4>
+        </li>
+        <p class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
+            Both antiquated and new slums will be categorized and listed based on the area they are occupying.
+        </p>
+    </ul>
 
-    <p  class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
-        Both antiquated and new slums will be categorized and listed based on the area they are occupying.
-    </p>
+    
+    
+
+    
+    
+
+    
     <h4>
         SAMPLE 2D AND 3D DIAGRAMS:
     </h4>
