--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,13 @@
 <div class="navbar">
     <div class="topNav" style="background-color: white;width:100%;">
-        <img src="assets/logo.png" style="height:10vh ;width: 5vw;margin-right: 1rem;" alt="hello" />
+        <img src="assets/logo12.png" style="height:12vh ;width: 6vw;margin-right: 1rem;" alt="hello" />
         <span>
             <span class="logo_name">HAPPYRESIDENCE4U</span><br />
             <strong style="font-size: 0.9rem;color:rgba(23, 164, 209, 1);font-family: poppins;">We build your visions ,
                 with perfections .</strong>
         </span>
         <span style="margin-left: 50%;">
+            <!-- <img src="../../assets/sihlogo.svg"> -->
             <img src="../../assets/sihlogo.svg">
         </span>
     </div>
@@ -20,5 +21,4 @@
             (click)="logout()" >LogOut</button>
     </div>
 </div>
-
 
