--- a/src/app/adminfolder/jobapplications/jobapplications.component.html
+++ b/src/app/adminfolder/jobapplications/jobapplications.component.html
@@ -1,21 +1,10 @@
-<div style="display: flex;justify-content:center;max-height: 1000vh;font-size: 0.9rem;">
+<div style="display: flex;justify-content:center;max-height: 100vh;font-size: 0.9rem;">
     <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"
-        style="float: right;">create job</button>
-
-
-    <!-- Modal -->
+        style="float: right;" (click)="displaymodal()">create job</button>
     <div id="myModal" class="modal fade" role="dialog">
-        <div [formGroup]="jobdetails" class="modal-dialog">
 
-            <input type="text" class="form-control" formControlName="jobid">
-            <input type="text" class="form-control" formControlName="jobtitle">
-            <input type="text" class="form-control" formControlName="jobdescription">
-            <input type="text" class="form-control" formControlName="amount">
-
-            <button (click)="createjob()" class="btn btn-primary">create job</button>
-        </div>
     </div>
-    <div class="row m-5 mt-0" *ngIf="data else nodata">
+    <!-- <div class="row m-5 mt-0" *ngIf="data else nodata">
         <div class="col card m-2 mb-0 shadow  border-0" style="background-color: whiteSmoke;padding: 1rem; "
             *ngFor="let c of data ; index as i">
             {{c.jobid}}
@@ -23,45 +12,6 @@
             {{c.mobileno}}
             {{c.jobtitle}}
             {{c.prevexperience}}
-            <!-- <table class="table">
-                <tbody>
-                    <tr>
-                        <td>Name</td>
-
-                    </tr>
-                    <tr>
-                        <td>Email</td>
-                        <td>{{c.email}}</td>
-                    </tr>
-                    <tr>
-                        <td>Mobile</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Alternative mobile</td>
-                        <td>{{c.altmobileno}}</td>
-                    </tr>
-                    <tr>
-                        <td>Job role</td>
-                        <td>{{c.jobid}}</td>
-                    </tr>
-                    <tr>
-                        <td>Previous Experience</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Previous workplace</td>
-                        <td>{{c.prevworkplace}}</td>
-                    </tr>
-                    <tr>
-                        <td>Address</td>
-                        <td>{{c.address}}</td>
-                    </tr>
-
-
-
-                </tbody>
-            </table>           -->
 
             <span style="float: right;">
                 <span style="display: flex;"><button class="btn btn-success m-1"
@@ -130,8 +80,39 @@
                 style="background-color: rgb(110, 16, 16);color:white">Rejected</button>
 
         </div>
-    </div>
+    </div> -->
     <ng-template #nodata>
         No job applications.
     </ng-template>
+</div>
+
+
+
+<div style="margin-top: 10%;" class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':display}">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" style="text-align: center;display: flex;justify-content: center;">Job Application</h4>
+            </div>
+            <div class="modal-body">
+                <div [formGroup]="jobdetails" class="modal-dialog">
+
+                    <input type="text" class="form-control" placeholder="jobid" formControlName="jobid"><br />
+                    <input type="text" class="form-control" placeholder="jobtitle" formControlName="jobtitle"><br />
+                    <input type="text" class="form-control" placeholder="jobdescription"
+                        formControlName="jobdescription"><br />
+                    <input type="text" class="form-control" placeholder="amount" formControlName="amount">
+
+
+                </div>
+            </div>
+
+            <div >
+                <button (click)="display='None'" style="float: right ;margin-right:1.2rem;" class="btn btn-danger" > Close</button>
+                <button (click)="createjob()" style="float: right ;margin:0rem 1rem;" class="btn btn-primary" >Create Job</button>
+
+            </div>
+            <br />
+        </div>
+    </div>
 </div>
